# xlab-onboarding

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  redis.conf
api/: Dockerfile  pyproject.toml
api/src/api/: main.py  models.py  settings.py  util.py
docs/: 1-dev-setup.md  1-getting-started.md  2-data-modeling.md  3-user-auth.md  4-inbox.md
email-filter/: pyproject.toml
email-filter/src/email_filter/: main.py
relay/: pyproject.toml
relay/src/relay/: main.py
src/xmail/: auth.py  factory.py  forms.py  models.py  settings.py
src/xmail/static/assets/css/: volt.css
src/xmail/templates/home/: 404.html  500.html  components-buttons.html  components-forms.html  components-modals.html  components-notifications.html  components-typography.html  dashboard.html  forgot-password.html  inbox.html  index.html  page-403.html  page-404.html  page-500.html  page-forgot-password.html  page-lock.html  page-reset-password.html  page-sign-in.html  page-sign-up.html  reset-password.html  settings.html  tables-bootstrap-tables.html  transactions.html
src/xmail/templates/includes/: scripts.html  sidebar.html
src/xmail/templates/layouts/: base-fullscreen.html
web/: Dockerfile  pyproject.toml  template-secrets.env
web/env/: common.env  template-secrets.env
web/src/web/: auth.py  factory.py  forms.py  main.py  models.py  settings.py
web/src/web/static/assets/: gulpfile.js  package-lock.json
web/src/web/static/assets/css/: volt.css
web/src/web/static/assets/js/: volt.js
web/src/web/templates/home/: 403.html  404.html  500.html  components-forms.html  components-modals.html  components-notifications.html  components-typography.html  dashboard.html  forgot-password.html  inbox.html  index.html  lock.html  login.html  page-403.html  page-404.html  page-500.html  page-forgot-password.html  page-lock.html  page-reset-password.html  page-sign-in.html  page-sign-up.html  register.html  reset-password.html  settings.html  sign-in.html  sign-up.html  tables-bootstrap-tables.html  tables.html  transactions.html
web/src/web/templates/includes/: footer.html  navigation.html  scripts.html  settings-box.html  sidebar.html
web/src/web/templates/layouts/: base-fullscreen.html  base.html
xmail/: app.py  models.py  settings.py
