[tool.poetry]
name = "xlab-onboarding"
version = "0.1.0"
description = ""
authors = ["rtatton <rdt17@proton.me>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/rtatton/xlab-onboarding"
repository = "https://github.com/rtatton/xlab-onboarding"
keywords = ["xlab"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.3"
pydantic = { extras = ["email", "dotenv"], version = "^1.9.1" }
keyring = "^23.7.0"
hat-py-sdk = { git = "https://github.com/cwru-xlab/hat-py-sdk", rev = "v0.3.4" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
