[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["rtatton <rdt17@proton.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.79.0"
redis-om = "^0.0.27"
pydantic = { extras = ["email"], version = "^1.9.1" }
bcrypt = "^3.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
