[tool.poetry]
name = "email-filter"
version = "0.1.0"
description = ""
authors = ["rtatton <rdt17@proton.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
aws-lambda-powertools = "^1.26.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
