[tool.poetry]
name = "relay"
version = "0.1.0"
description = ""
authors = ["rtatton <rdt17@proton.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.24.41"
aws-error-utils = "^2.5.0"
pydantic = { extras = ["email"], version = "^1.9.1" }
pyhumps = "^3.7.2"
aws-lambda-powertools = "^1.26.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
