[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["rtatton <rtatton17@proton.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.3"
hat-py-sdk = { git = "https://github.com/cwru-xlab/hat-py-sdk", rev = "v0.5.3" }
keyring = "^23.7.0"
pydantic = { extras = ["dotenv", "email"], version = "^1.9.1" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
