[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["rtatton <rtatton17@proton.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.3"
Flask-Security-Too = "^4.1.5"
bleach = "^5.0.1"
hat-py-sdk = { git = "https://github.com/rtatton/hat-py-sdk", rev = "v0.17.8" }
keyring = "^23.7.0"
pydantic = { extras = ["email"], version = "^1.9.1" }
python-dotenv = "^0.20.0"
python-ulid = "^1.1.0"
redis-om = "^0.0.27"
zxcvbn = "^4.4.28"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
